feat(apps/admin): add proper auth and analytics page
