# apps/server/src/docs/openapi.yaml
@@ -19,7 +19,7 @@ tags:
     description: Operations related to management companies
 
 paths:
-  /auth/logout: # <-- NEW ENDPOINT
+  /auth/logout:
     post:
       tags:
         - Auth
@@ -354,6 +354,60 @@ paths:
           description: Forbidden
         "404":
           description: Not Found
+  /admin/me:
+    get:
+      tags: [Admin]
+      summary: Get current admin user profile
+      description:
+        Fetches the profile of the currently authenticated admin user.
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: User profile retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserResponse"
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+
+  /admin/companies:
+    get:
+      tags: [Admin]
+      summary: Get all companies (Admin)
+      description:
+        Fetches a complete list of all management companies for the admin
+        dashboard.
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: A list of all companies.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/CompanyResponseWithScpis"
+  /admin/scpis:
+    get:
+      tags: [Admin]
+      summary: Get all SCPIs (Admin)
+      description: Fetches a complete list of all SCPIs for the admin dashboard.
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: A list of all SCPIs.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/SCPIResponse"
 components:
   securitySchemes:
     bearerAuth:
